# lavender

./: .gitignore  Ast.cpp  Ast.hpp  CMakeLists.txt  Checker.cpp  Checker.hpp  Codegen.cpp  Codegen.hpp  Common.cpp  Common.hpp  Parser.cpp  Parser.hpp  Project.cpp  Project.hpp  README.md  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
syntax/lavender/: CHANGELOG.md  package-lock.json  package.json  vsc-extension-quickstart.md
syntax/lavender/syntaxes/: lavender.tmLanguage.json
tests/: basic.lav  basic.lng  control_flow.lng  generics.lav  indent_test.lng  interface.lav  numbers.lng  pattern_matching.c  pattern_matching.lav  strings.lng  type_ideas.lav  unsafe.lav
